Fix broken views on mobile and small screens (#2671)
* Fix mobile CSS for my-account-settings

* Fix mobile CSS for my-account-videos

* Fix mobile CSS my-account-video-channels

* Fix mobile CSS for my-account-playlists

* Fix CSS mobile for user-subscriptions header

* Fix CSS mobile my-account-video-channel-edit

* Fix CSS mobile / small view for textarea

* Fix margin-right my-delete-button on inside span

* Fix CSS mobile on accounts page

* Fix indent

* Fix CSS mobile for my-account-notifications

* Fix CSS mobile / small view my-account-videos

* Fix search small-view channels

* Use miniature width for title of video on mobile

* Add dots to ellipsis multilines

* Fix controls and title video width small views

* Fix my-account-playlist small and mobile views

* Fix channels header + account header mobile

* Fix CSS mobile/small view for my-account/subscriptions

* Fix align followers channel item

* Center header elements user account page on mobile

* Fix margins on a element and img

* Fix margin img channel or video

--- a/client/src/app/+accounts/accounts.component.scss
+++ b/client/src/app/+accounts/accounts.component.scss
@@ -56,3 +56,32 @@ my-user-moderation-dropdown,
   padding: 5px;
   margin-top: -2px;
 }
+
+@media screen and (max-width: $mobile-view) {
+  .sub-menu {
+    .actor {
+      flex-direction: column;
+      align-items: center;
+
+      img,
+      .actor-info .actor-names .actor-display-name {
+        margin-right: 0;
+      }
+
+      .actor-info  {
+        .actor-names {
+          flex-direction: column;
+          align-items: center;
+        }
+
+        my-user-moderation-dropdown {
+          margin-left: 0;
+        }
+
+        .actor-followers {
+          text-align: center;
+        }
+      }
+    }
+  }
+}
