--- a/client/src/sass/application.scss
+++ b/client/src/sass/application.scss
@@ -301,10 +301,13 @@ table {
         overflow-x: auto;
         padding-left: 15px;
         padding-right: 15px;
-        margin-bottom: 10px;
+        margin-bottom: $sub-menu-margin-bottom-small-view;
       }
 
-      input[type=text], input[type=password] {
+      input[type=text],
+      input[type=password],
+      input[type=email],
+      textarea {
         width: 100% !important;
       }
     }
