--- a/client/src/app/+my-account/my-account-video-playlists/my-account-video-playlist-elements.component.scss
+++ b/client/src/app/+my-account/my-account-video-playlists/my-account-video-playlist-elements.component.scss
@@ -11,6 +11,11 @@
 
   display: flex;
   justify-content: center;
+
+  /* fix ellipsis dots background color */
+  ::ng-deep .miniature-name::after {
+    background-color: var(--submenuColor) !important;
+  }
 }
 
 // Thanks Angular CDK <3 https://material.angular.io/cdk/drag-drop/examples
@@ -36,4 +41,10 @@
 
 .videos.cdk-drop-list-dragging .video:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+@media screen and (max-width: $small-view) {
+  .playlist-info {
+    margin-top: -$sub-menu-margin-bottom-small-view;
+  }
 }
